# reviewcppbasics

./: CMakeLists.txt  main.cpp  readme.md
01pointer/: pointer.cpp  pointer.h
02reference/: reference.cpp  reference.h
03static/: StaticVar.cpp  StaticVar.h  singleton_nonstatic.cpp  singleton_nonstatic.h  static.cpp  static.h  static_inside.cpp  static_inside.h
04inheritance/: virtualdemo.cpp  virtualdemo.h
05const/: constandpointer.cpp  constandpointer.h
06mutable/: mutabledemo.cpp  mutabledemo.h
07memberinitializerlist/: MemberInitializerListDemo.cpp  MemberInitializerListDemo.h
08smartpointer/: scopedptr.cpp  scopedptr.h
09uniqueptr/: uniqueptrdemo.cpp  uniqueptrdemo.h
10copydemo/: copydemo.cpp  copydemo.h
11arrow/: arrowdemo.cpp  arrowdemo.h
12STLexamples/: stldemo.cpp  stldemo.h
13template/: templateDemo.cpp  templateDemo.h
14autodemo/: autodemo.cpp  autodemo.h
15funcptr/: functionpointerdemo.cpp  functionpointerdemo.h  functionptrbetter.cpp  functionptrbetter.h
16thread/: threaddemo.cpp  threaddemo.h
